<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".formularioMascota">


    <Switch
        android:id="@+id/swtGrande"
        android:layout_width="97dp"
        android:layout_height="38dp"
        android:layout_below="@+id/edtCumple"
        android:layout_alignStart="@+id/edtCumple"
        android:layout_marginStart="0dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="15dp"
        android:text="@string/swt_Grande" />

        <Switch
            android:id="@+id/swMediano"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtvTamaño"
            android:layout_marginTop="14dp"
            android:layout_centerHorizontal="true"
            android:text="@string/swt_Mediano" />

    <Switch
        android:id="@+id/swChico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_Peso"
        android:layout_alignEnd="@+id/edt_Peso"
        android:layout_marginStart="30dp"

        android:layout_marginTop="67dp"
        android:layout_marginEnd="7dp"
        android:shadowColor="@color/colorBotonesSec"
        android:text="@string/swt_Chico" />

    <Button
        android:id="@+id/btnTerminar"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spnRazas"
        android:layout_alignStart="@+id/txtvRaza"
        android:layout_marginStart="57dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/boton_registrar"
        android:onClick="OnCLickTerminar"
        android:text="Terminar"
        android:textColor="@color/backGround1"
        android:textColorHint="@color/backGround1" />

    <EditText
        android:id="@+id/edtCumple"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtvCumpleaños"
        android:layout_alignStart="@+id/txtvCumpleaños"
        android:layout_marginStart="0dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorBotonesSec"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="19/05/19"
        android:inputType="date"
        android:textColor="@color/backGround1"
        android:textColorHint="@color/backGround1" />

    <TextView
        android:id="@+id/txtvCumpleaños"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtNombreMascota"
        android:layout_alignStart="@+id/edtNombreMascota"
        android:layout_marginStart="0dp"
        android:layout_marginTop="10dp"
        android:text="@string/txt_Cumpleaños"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtvNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imvFotoMascota"
        android:layout_marginTop="10dp"

        android:layout_marginRight="-18dp"
        android:layout_toLeftOf="@+id/imvFotoMascota"
        android:text="@string/txt_Nombre"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edtNombreMascota"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtvNombre"
        android:layout_alignStart="@+id/txtvNombre"
        android:layout_marginStart="0dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorBotonesSec"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/backGround1"
        android:textColorHint="@color/backGround1" />

        <TextView
            android:id="@+id/txtvTamaño"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtCumple"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:text="@string/txt_Tamaño"
            android:textSize="18sp" />

    <TextView
        android:id="@+id/txtvRaza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/swMediano"
        android:layout_alignStart="@+id/swtGrande"
        android:layout_marginStart="4dp"
        android:layout_marginTop="15dp"
        android:text="@string/txt_Raza"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/imvFotoMascota"
        android:layout_width="229dp"
        android:layout_height="248dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        app:srcCompat="@drawable/gato1" />

        <ImageButton
            android:id="@+id/imbEditarFoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtvFoto"
            android:layout_marginStart="65dp"
            android:layout_marginTop="180dp"
            android:background="@drawable/boton_editar"
            android:layout_toRightOf="@+id/edtNombreMascota"
            android:onClick="onClickEditarFoto"
            app:srcCompat="@drawable/ic_editar" />

    <TextView
        android:id="@+id/txtvFoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/pcb_foto"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtvPeso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtNombreMascota"
        android:layout_marginStart="101dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/txtvCumpleaños"
        android:text="@string/txtv_Peso"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edt_Peso"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtvPeso"
        android:layout_marginStart="89dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/edtCumple"
        android:background="@color/colorBotonesSec"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="Kg"
        android:inputType="textPersonName"
        android:textColorHint="@color/backGround1"
        android:textSize="18sp" />

    <Switch
        android:id="@+id/swPerroGato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtvNombre"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/txtvPerro"
        android:onClick="onClickSeleccionaRaza" />

    <TextView
        android:id="@+id/txtvPerro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtvNombre"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/edtNombreMascota"
        android:text="Perro" />

    <TextView
        android:id="@+id/txtvGato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtvNombre"
        android:layout_marginStart="11dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/swPerroGato"
        android:text="Gato" />

    <Spinner
        android:id="@+id/spnRazas"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/swMediano"
        android:layout_marginStart="37dp"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@+id/txtvRaza" />


</RelativeLayout>